--- a/RemoteCommunication.Embedded/RemoteCommunication.Embedded.csproj
+++ b/RemoteCommunication.Embedded/RemoteCommunication.Embedded.csproj
@@ -18,7 +18,7 @@
 
     <!-- Read the contents of the files (preserving tabs/spaces). -->
     <ItemGroup>
-      <FileContents Include="$([System.IO.File]::ReadAllText(%(ConcatFiles.Identity)).Replace(&quot;namespace RemoteCommunication&quot;, &quot;namespace EmbeddedRemoteCommunication&quot;).Replace(&quot; public class &quot;,&quot; internal class &quot;).Replace(&quot; public abstract class &quot;, &quot; internal abstract class &quot;).Replace(&quot; public static class &quot;, &quot; internal static class &quot;).Replace(&quot; public sealed class &quot;, &quot; internal sealed class &quot;).Replace(&quot; public interface &quot;, &quot; internal interface &quot;) )" />
+      <FileContents Include="$([System.IO.File]::ReadAllText(&quot;%(ConcatFiles.Identity)&quot;).Replace(&quot;namespace RemoteCommunication&quot;, &quot;namespace EmbeddedRemoteCommunication&quot;).Replace(&quot; public class &quot;,&quot; internal class &quot;).Replace(&quot; public abstract class &quot;, &quot; internal abstract class &quot;).Replace(&quot; public static class &quot;, &quot; internal static class &quot;).Replace(&quot; public sealed class &quot;, &quot; internal sealed class &quot;).Replace(&quot; public interface &quot;, &quot; internal interface &quot;) )" />
     </ItemGroup>
 
     <!-- Write the result to a single file. -->
