--- a/RemoteCommunication.Embedded/RemoteCommunication.Embedded.csproj
+++ b/RemoteCommunication.Embedded/RemoteCommunication.Embedded.csproj
@@ -13,7 +13,7 @@
     <!-- List all the files you want to concatenate. -->
     <ItemGroup>
       <ConcatFiles Include="..\RemoteCommunication\**\EmbeddedHeader.txt" />
-      <ConcatFiles Include="..\RemoteCommunication\**\*.cs" Exclude="..\RemoteCommunication\**\*AssemblyInfo.cs" />
+      <ConcatFiles Include="..\RemoteCommunication\**\*.cs" Exclude="..\RemoteCommunication\**\*AssemblyInfo.cs;..\RemoteCommunication\obj\**\*.cs" />
     </ItemGroup>
 
     <!-- Read the contents of the files (preserving tabs/spaces). -->
